--- a/vue-deck.mdx
+++ b/vue-deck.mdx
@@ -240,6 +240,8 @@ ajustándose a las necesidades de negocio mediante diversos otros elementos que 
 
 # Un ejemplo de un proyecto de vue mas completo
 
+<img src="http://giphygifs.s3.amazonaws.com/media/amrNGnZUeWhZC/giphy.gif" alt="Pokemon" />
+
 ---
 
 # Unanse a nuestro slack
